--- a/src/pages/ConsolePage.scss
+++ b/src/pages/ConsolePage.scss
@@ -138,7 +138,7 @@
         flex-shrink: 0;
         width: 100%;
         overflow: hidden;
-        height: 200px;
+        height: 90%;
         min-height: 0;
         max-height: 200px;
         border-top: 1px solid #e7e7e7;
